--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>API Capston</title>
-	 <link rel="stylesheet" href="api.css">
-</head>
-<body>
-<h1>Search For Videos</h1>
-<form>
-<div>
-<input class="search" type="Text" name="">
-	<button>Search</button>
-</div>
-<div class="results">Results:</div>
-</form>
-<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+  <title>Nevertheless, She Persisted</title>
 
-<script src="api.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Waiting+for+the+Sunrise" rel="stylesheet">
+  <link rel="stylesheet" href="quizapp.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/sweetalert/dist/sweetalert.css">
+  </head>
+<body>
+
+<div class="container">
+  <div>   
+      <span class="restart" type="submit"></span>
+      <li class="questions"></li>
+  </div>
+
+</div>
+    
+
+<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+<script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
+
+<script src="quizapp.js"></script>
+
 </body>
 </html>
