added flex box to css, added main to html, created variable to search multiple women

--- a/index.html
+++ b/index.html
@@ -2,38 +2,39 @@
 <html>
 <head>
  
-   <link rel="stylesheet" href="api.css">
-
- <title>Nevertheless, She Persisted</title>
+ <title>Strong Women</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Waiting+for+the+Sunrise" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="bower_components/sweetalert/dist/sweetalert.css">
+  <link rel="stylesheet" href="api.css">
 
 </head>
 <body>
+<nav class="nav">Here's to Strong women...May we know them, May we be them, May we Raise them!</nav>   <!--Need to find font, and set it as a quote-->
   <!--Side bar for quiz app-->
+<main>
+	<div class="container">
+	  <div>   
+	      <span class="restart" type="submit"></span>
+	      <li class="questions"></li>
+	  </div>
 
-<div class="container">
-  <div>   
-      <span class="restart" type="submit"></span>
-      <li class="questions"></li>
-  </div>
-
-</div>
-
- <!--API Content-->
-
-<div class="api">
-<h2>Search for Women</h2>
-<form>
-	<div>
-		<input class="search" type="Text" name="">
-  		<button>Search</button>
 	</div>
-	<div class="results">Results:</div>
-</form>
-</div>
+
+	 <!--API Content-->
+
+	<div class="api">
+	<h2>Search for Women</h2>
+	<form>
+		<div>
+			<input class="search" type="Text" value="Katherine Johnson">
+	  		<button>Search</button>
+		</div>
+		<div class="results">Results:</div>
+	</form>
+	</div>
+</main>
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
 <script src="api.js"></script>
