--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Waiting+for+the+Sunrise" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Homemade+Apple|Love+Ya+Like+A+Sister|Special+Elite" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="bower_components/sweetalert/dist/sweetalert.css">
   <link rel="stylesheet" href="api.css">
 
 </head>
 <body>
-<nav class="nav">Here's to Strong women...May we know them, May we be them, May we Raise them!</nav>   <!--Need to find font, and set it as a quote-->
+<nav class="nav">Here's to <span class="strong">Strong women...</span><br>
+May we celebrate them,<br>
+May we be them,<br>
+May we know them!<br></nav>   <!--Need to find font, and set it as a quote-->
   <!--Side bar for quiz app-->
 <main>
 	<div class="container">
@@ -28,7 +32,7 @@
 	<h2>Search for Women</h2>
 	<form>
 		<div>
-			<input class="search" type="Text" value="Katherine Johnson">
+			<input class="search" type="Text" value="learn about...">
 	  		<button>Search</button>
 		</div>
 		<div class="results">Results:</div>
