added warnigns for Sonia Sotomayor, added div for intro, updated colors and fonts

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Homemade+Apple|Love+Ya+Like+A+Sister|Special+Elite" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="bower_components/sweetalert/dist/sweetalert.css">
   <link rel="stylesheet" href="api.css">
-
 </head>
 <body>
+<head>
 <nav class="nav">Here's to <span class="strong">Strong women...</span><br>
 May we celebrate them,<br>
 May we be them,<br>
 May we know them!<br></nav>   <!--Need to find font, and set it as a quote-->
   <!--Side bar for quiz app-->
+ <div class="intro">This project started as a protest to Mitch McConnels rude words toward Elizabeth's statemetns on the Senate Floor. I'm excited to use my new found coding skills to celebrate minority women who have persisted. This list of women has only begun! </div>
 <main>
 	<div class="container">
 	  <div>   
