added drop down menu, user can't change question until right answer, aligned wikipedia with name

--- a/index.html
+++ b/index.html
@@ -33,11 +33,19 @@ May we know them!<br></nav>   <!--Need to find font, and set it as a quote-->
 	<h2>May we know them...</h2>
 	<form>
 		<div>
-			<input class="search" type="Text" value="learn about...">
+			<select class="select">
+	  		<option value="Rosa Parks">Rosa Parks</option>
+	  		<option value="Mary Jackson (engineer)">Mary Jackson (engineer)</option>
+	  		<option value="Malala Yousafzai">Malala Yousafzai</option>
+	  		<option value="May Edward Chinn">May Edward Chinn</option>
+	  		<option value="Sonia Sotomayor">Sonia Sotomayor</option>
+			</select>
 	  		<button>Search</button>
 		</div>
-		<div class="results">Results:</div>
 	</form>
+	<div class="results">
+		
+	</div>
 	</div>
 </main>
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
