--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ May we know them!<br></nav>   <!--Need to find font, and set it as a quote-->
 
 	<div class="api">
 	<h2>May we know them...</h2>
+	<div class="images"></div>
 	<form>
 		<div>
 			<select class="select">
