set the option to default choose woman when questions changes, completed API exercise

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ May we know them!<br></nav>   <!--Need to find font, and set it as a quote-->
 	<form>
 		<div>
 			<select class="select">
+			<option value="choose">choose a woman...</option>
 	  		<option value="Rosa Parks">Rosa Parks</option>
 	  		<option value="Mary Jackson (engineer)">Mary Jackson (engineer)</option>
 	  		<option value="Malala Yousafzai">Malala Yousafzai</option>
