--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ May we celebrate them,<br>
 May we be them,<br>
 May we know them!<br></nav>   <!--Need to find font, and set it as a quote-->
   <!--Side bar for quiz app-->
- <div class="intro">This project started as a protest to Mitch McConnel's words toward Elizabeth's statements on the Senate Floor. I'm excited to use my new found coding skills to celebrate minority women who have persisted. This list of women has only begun! </div>
+ <div class="intro">This project started as a protest to Mitch McConnel's words toward Elizabeth Warren's statements on the Senate Floor. I'm excited to use my new found coding skills to celebrate minority women who have persisted. This list of women has only begun! </div>
 <main>
 	<div class="container">
 	  <div>   
