updated css setting to make it mobile responsive

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  
  <title>Strong Women</title>
-
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Waiting+for+the+Sunrise" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Homemade+Apple|Love+Ya+Like+A+Sister|Special+Elite" rel="stylesheet">
